Angular-Local-Storage in

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -28,8 +28,8 @@
   </tr>
 </table>
 
-<P>Reward Points: <span class="label label-success">{{rewardPoints}}</span>
-Punishment Points: <span class="label label-important">{{punishmentPoints}}</span> </p>
+<P>Reward Points: <span class="label label-success">{{rewardPoints|number}}</span>
+Punishment Points: <span class="label label-important">{{punishmentPoints|number}}</span> </p>
 	
     
 </div>
